<resources>


    <string name="title_activity_auth">Authentication</string>
    <!-- Strings used for fragments for navigation -->

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Authenticate with email</string>


    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Authenticate with phone number</string>


    <string name="field_required">Field is required.</string>
    <string name="form_incorrect">Form filled incorrectly.</string>
    <string name="phone_incorrect">Incorrect or empty phone number.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Sign Up</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="emailpassword_title_text">Auth with email and password or</string>
    <string name="phone_title_text">Auth with phone number or</string>

    <string name="reload">Reload</string>

    <string name="error_sign_in_failed">Sign in failed, see logs for details.</string>
    <string name="multi_factor_signed_out">You are not signed in. To use this sample, first navigate to the Email/Password example to sign in and then return here to enroll in multi-factor auth.</string>
    <string name="label_multi_factor">Multi-Factor Authentication</string>
    <string name="auth_with_phone_number">click to auth with phone</string>
    <string name="auth_with_email">click to auth with email</string>
    <string name="module_name">Authentication</string>

</resources>